[project]
name = "data-annotation-jobs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.3.4",
    "marimo>=0.10.12",
    "pandas>=2.2.3",
    "polars>=1.20.0",
    "pydantic>=2.10.6",
    "tabulate>=0.9.0",
]
